<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/promohotel"
            android:scaleType="centerCrop"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10">

            <com.pranav.foodcharm.view.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_charm"
                android:textColor="@color/white_light"
                android:textStyle="bold"
                android:textSize="@dimen/dp_25"
                app:fontName="@string/helvetica_medium"/>
            
            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_fiber_smart_record_lime_500_24dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_100"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/bt_signup"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_light"
                android:textSize="@dimen/dp_15"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:text="@string/signup" />

            <Button
                android:id="@+id/bt_signin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_light"
                android:layout_toRightOf="@id/bt_signup"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/dp_15"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:text="@string/signin" />

        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"/>

</RelativeLayout>