<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@color/white_transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@color/light_white"
        android:orientation="vertical">

        <com.pranav.foodcharm.view.TextView
            android:id="@+id/heading_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/please_select_country"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/dash_board_black"
            android:textSize="@dimen/sp_18"
            app:fontName="@string/helvetica_medium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_done"
            android:layout_below="@+id/heading_text"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"/>

        <com.pranav.foodcharm.view.TextView
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/transparent"
            android:gravity="center_horizontal"
            android:padding="@dimen/dp_12"
            android:text="@string/tv_done"
            android:textSize="@dimen/sp_15"
            android:visibility="gone"
            app:fontName="@string/helvetica_medium" />

    </LinearLayout>

    <ImageView
        android:id="@+id/mImage_view"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:src="@drawable/lowes"/>

</RelativeLayout>