<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/reset"
        android:scaleType="centerCrop"
        android:alpha="0.6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/ll_register_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/dp_10"
                android:orientation="vertical">


                <com.pranav.foodcharm.view.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dp_3"
                    android:text="@string/mobile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_18"
                    app:fontName="@string/helvetica_medium" />

                <com.pranav.foodcharm.view.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dp_3"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/mobile_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16"
                    app:fontName="@string/helvetica_medium" />



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:background="@color/transparent"
                    android:paddingTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/iv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/black_transparent"
                        android:src="@drawable/ic_phone"
                        android:visibility="gone" />

                    <com.pranav.foodcharm.view.TextView
                        android:id="@+id/tv_sp_country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/iv_mobile"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/dash_board_black"
                        android:textColorHint="@color/dash_board_black"
                        android:textSize="@dimen/sp_13"
                        app:fontName="@string/helvetica_medium" />

                    <Spinner
                        android:id="@+id/sp_country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white_transparent"
                        android:popupBackground="@color/red"
                        android:scrollbars="none"
                        android:spinnerMode="dropdown"
                        android:visibility="gone" />

                    <com.pranav.foodcharm.view.CustomEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_toRightOf="@+id/tv_sp_country_code"
                        android:background="@color/white_transparent"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/dash_board_black"
                        android:textColorHint="@color/dash_board_black"
                        app:fontName="@string/helvetica_medium" />

                </RelativeLayout>
            </LinearLayout>


            <com.pranav.foodcharm.view.TextView
                android:id="@+id/tv_send_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_register_detail"
                android:text="@string/send_otp"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>

        <com.pranav.foodcharm.view.TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_send_otp"
            android:text="@string/resend_otp"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/dp_18"
            android:textColor="@color/dash_board_black"
            app:fontName="@string/helvetica_medium"/>


    </RelativeLayout>

</RelativeLayout>