<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.4"
            android:src="@drawable/images"/>


        <LinearLayout
            android:id="@+id/iv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/food"/>

            <com.pranav.foodcharm.view.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_ll_be_quick"
                android:textSize="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_register_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cv_profile"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:alpha="0.8"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_img"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dp_2" />

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera"
                    android:visibility="visible" />


            </FrameLayout>

            <com.pranav.foodcharm.view.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/add_photos"
                android:textColor="@color/dash_board_black"
                android:textSize="@dimen/sp_15"
                app:fontName="@string/helvetica_medium" />

            <com.pranav.foodcharm.view.CustomEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/dash_board_black"
                android:hint="@string/your_name"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/dash_board_black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_10"
                android:singleLine="true"
                app:fontName="@string/helvetica_medium"/>

            <com.pranav.foodcharm.view.CustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/transparent"
                android:hint="@string/Email"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:textColorHint="@color/dash_board_black"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_10"
                android:background="@color/transparent"
                android:paddingTop="@dimen/dp_10">

                <ImageView
                    android:id="@+id/iv_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/black_transparent"
                    android:src="@drawable/ic_phone"
                    android:visibility="gone" />

                <com.pranav.foodcharm.view.TextView
                    android:id="@+id/tv_sp_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_mobile"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/dash_board_black"
                    android:textColorHint="@color/dash_board_black"
                    android:textSize="@dimen/sp_13"
                    app:fontName="@string/helvetica_medium" />

                <Spinner
                    android:id="@+id/sp_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/white_transparent"
                    android:popupBackground="@color/red"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:visibility="gone" />

                <com.pranav.foodcharm.view.CustomEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@+id/tv_sp_country_code"
                    android:background="@color/white_transparent"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/dash_board_black"
                    android:textColorHint="@color/dash_board_black"
                    app:fontName="@string/helvetica_medium" />

            </RelativeLayout>

            <com.pranav.foodcharm.view.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:textColorHint="@color/dash_board_black"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>
        </LinearLayout>


        <com.pranav.foodcharm.view.TextView
            android:id="@+id/tv_join_foodspotting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_register_detail"
            android:text="@string/join_foodspotting"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:textStyle="bold"
            app:fontName="@string/helvetica_medium"/>

    </RelativeLayout>

</RelativeLayout>
