<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.4"
            android:background="@drawable/login"/>


        <LinearLayout
            android:id="@+id/iv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_love"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@drawable/love"/>

            <com.pranav.foodcharm.view.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Love Food"
                android:textSize="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_register_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

            <com.pranav.foodcharm.view.CustomEditText
                android:id="@+id/et_food_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/dash_board_black"
                android:hint="@string/food_id"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/dash_board_black"
                android:textStyle="bold"
                android:singleLine="true"
                app:fontName="@string/helvetica_medium"/>

            <com.pranav.foodcharm.view.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:textColorHint="@color/dash_board_black"
                android:textStyle="bold"
                app:fontName="@string/helvetica_medium"/>

        </LinearLayout>


        <com.pranav.foodcharm.view.TextView
            android:id="@+id/tv_lets_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_register_detail"
            android:text="@string/lets_start"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:textStyle="bold"
            app:fontName="@string/helvetica_medium"/>

        <com.pranav.foodcharm.view.TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_lets_start"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/dp_15"
            android:textColor="@color/dash_board_black"
            app:fontName="@string/helvetica_medium"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot_password"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@drawable/facebook"/>

            <ImageView
                android:id="@+id/img_gmail"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@drawable/mail"/>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
